--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
   "name": "kasko2do",
   "private": true,
-  "version": "0.0.0",
+  "version": "0.0.1",
   "type": "module",
+  "engines": {
+    "node": ">=20.16.0",
+    "npm": ">=10.8.1"
+  },
   "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
@@ -15,6 +19,7 @@
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@fontsource/roboto": "^5.0.13",
+    "@mui/icons-material": "^5.16.6",
     "@mui/material": "^5.16.6",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
